--- a/flutter_application_p3/pubspec.yaml
+++ b/flutter_application_p3/pubspec.yaml
@@ -61,6 +61,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/imagem1.png
+      - assets/imagem2.png
+      - assets/imagem3.png
+      - assets/imagem4.png
      # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
